--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "homepage": "https://github.com/katbosnic/find-my-fave-pup.git",
   "name": "my-first-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "create-react-app": "^3.1.1",
     "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -32,6 +34,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://github.com/katbosnic/find-my-fave-pup.git"
+  }
+  
 }
