--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "https://github.com/katbosnic/find-my-fave-pup.git",
   "name": "my-first-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/katbosnic/find-my-fave-pup",
   "dependencies": {
     "axios": "^0.19.0",
     "create-react-app": "^3.1.1",
@@ -14,11 +14,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
